--- a/book/math_foundations/labo/numpy.ipynb
+++ b/book/math_foundations/labo/numpy.ipynb
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 112,
       "metadata": {
         "id": "58QdX8BLL9hZ"
       },
@@ -53,12 +53,12 @@
         "id": "f-Zv3f7LL9hc"
       },
       "source": [
-        "Een numpy array is een raster van waarden, allemaal van hetzelfde type, en wordt geïndexeerd door een tuple van niet-negatieve integers. De _shape_ van een array is een tuple van integers die de grootte van de array langs elke dimensie aangeeft."
+        "Een numpy array is een raster van waarden, allemaal van hetzelfde type, en wordt geïndexeerd aan de hand van integers. De _shape_ van een array is een tuple van integers die de grootte van de array langs elke dimensie aangeeft."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 192,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -73,22 +73,43 @@
           "output_type": "stream",
           "text": [
             "[1 2 3]\n",
-            "<class 'numpy.ndarray'> (3,) 1 2 3\n",
+            "type(a): <class 'numpy.ndarray'>\n",
+            "a.shape: (3,)\n",
+            "a[0]: 1\n",
+            "a[1]: 2\n",
+            "a[2]: 3\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Create a vector\n",
+        "a = np.array([1, 2, 3])\n",
+        "print(a)\n",
+        "print(f\"type(a): {type(a)}\\na.shape: {a.shape}\\na[0]: {a[0]}\\na[1]: {a[1]}\\na[2]: {a[2]}\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 193,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
             "[5 2 3]\n"
           ]
         }
       ],
       "source": [
-        "a = np.array([1, 2, 3])  # Create a rank 1 array\n",
-        "print(a)\n",
-        "print(type(a), a.shape, a[0], a[1], a[2])\n",
-        "a[0] = 5  # Change an element of the array\n",
+        "# Change an element of the array\n",
+        "a[0] = 5\n",
         "print(a)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -104,14 +125,46 @@
           "text": [
             "[[1 2 3]\n",
             " [4 5 6]]\n",
-            "(2, 3) 1 3 4\n"
+            "type(b): <class 'numpy.ndarray'>\n",
+            "b.shape: (2, 3)\n",
+            "b[0, 0]: 1\n",
+            "b[0, 2]: 3\n",
+            "b[1, 0]: 4\n"
           ]
         }
       ],
       "source": [
-        "b = np.array([[1, 2, 3], [4, 5, 6]])  # Create a rank 2 array\n",
+        "# Create a rank 2 array\n",
+        "b = np.array([[1, 2, 3], [4, 5, 6]])\n",
         "print(b)\n",
-        "print(b.shape, b[0, 0], b[0, 2], b[1, 0])"
+        "print(\n",
+        "    f\"type(b): {type(b)}\\nb.shape: {b.shape}\\nb[0, 0]: {b[0, 0]}\\nb[0, 2]: {b[0, 2]}\\nb[1, 0]: {b[1, 0]}\"\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Indexatie kan ook gebeuren aan de hand van tuples van integers waardoor we de indexatie via variabelen kunnen doen."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 196,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "3\n"
+          ]
+        }
+      ],
+      "source": [
+        "index = (0, 2)\n",
+        "print(b[index])"
       ]
     },
     {
@@ -120,12 +173,12 @@
         "id": "F2qwdyvuL9hn"
       },
       "source": [
-        "Er zijn ook talrijke functies om speciale matrices te creëren."
+        "Er zijn ook talrijke functies om speciale matrices te creëren op basis van shape tuples."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -146,13 +199,14 @@
         }
       ],
       "source": [
-        "a = np.zeros((3, 2))  # Create an array of all zeros\n",
+        "# Create an array of all zeros\n",
+        "a = np.zeros((3, 2))\n",
         "print(a)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -174,13 +228,14 @@
         }
       ],
       "source": [
-        "b = np.ones((4, 5))  # Create an array of all ones\n",
+        "# Create an array of all ones\n",
+        "b = np.ones((4, 5))\n",
         "print(b)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -200,13 +255,14 @@
         }
       ],
       "source": [
-        "c = np.full((2, 3), 7)  # Create a constant array\n",
+        "# Create a constant array\n",
+        "c = np.full((2, 3), 7)\n",
         "print(c)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -229,13 +285,14 @@
         }
       ],
       "source": [
-        "d = np.eye(5)  # Create a 5x5 identity matrix\n",
+        "# Create a 5x5 identity matrix\n",
+        "d = np.eye(5)\n",
         "print(d)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -249,15 +306,15 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[[0.40660223 0.77665265 0.52879837]\n",
-            " [0.37462323 0.81273087 0.18661228]]\n"
+            "[[0.2848079  0.92009732 0.14159273]\n",
+            " [0.37762878 0.48835331 0.63026808]]\n"
           ]
         }
       ],
       "source": [
+        "# Create an array filled with random values\n",
         "rng = np.random.default_rng()  # Create a random number generator\n",
-        "\n",
-        "e = rng.random((2, 3))  # Create an array filled with random values\n",
+        "e = rng.random((2, 3))\n",
         "print(e)"
       ]
     },
@@ -290,7 +347,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 188,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -337,7 +394,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 189,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -365,43 +422,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "_Zcf3zi-L9iI"
-      },
-      "source": [
-        "You can also mix integer indexing with slice indexing. However, doing so will yield an array of lower rank than the original array. Note that this is quite different from the way that MATLAB handles array slicing:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 69
-        },
-        "id": "G6lfbPuxL9iJ",
-        "outputId": "a225fe9d-2a29-4e14-a243-2b7d583bd4bc"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "[[ 1  2  3  4]\n",
-            " [ 5  6  7  8]\n",
-            " [ 9 10 11 12]]\n"
-          ]
-        }
-      ],
-      "source": [
-        "# Create the following rank 2 array with shape (3, 4)\n",
-        "a = np.array([[1, 2, 3, 4], [5, 6, 7, 8], [9, 10, 11, 12]])\n",
-        "print(a)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "NCye3NXhL9iL"
       },
       "source": [
@@ -413,7 +433,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 123,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -444,7 +464,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 124,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -486,7 +506,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 125,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -518,7 +538,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 126,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -557,7 +577,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 127,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -586,7 +606,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 128,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -614,7 +634,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 129,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -652,7 +672,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 130,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -687,7 +707,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 131,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -745,7 +765,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 132,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -800,7 +820,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 133,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -832,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 134,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -861,7 +881,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 135,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -890,7 +910,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 136,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -921,7 +941,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 137,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -958,7 +978,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 138,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1000,7 +1020,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 139,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1024,7 +1044,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 140,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1053,7 +1073,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 141,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1096,7 +1116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 142,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1137,7 +1157,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 143,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1166,7 +1186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 144,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1216,7 +1236,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 145,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1262,7 +1282,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 146,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1293,7 +1313,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 147,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1330,7 +1350,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 148,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1387,7 +1407,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 149,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1420,7 +1440,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 150,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1450,7 +1470,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 151,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1482,7 +1502,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 152,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1510,7 +1530,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 153,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1570,7 +1590,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 154,
       "metadata": {
         "id": "NormExamples"
       },
@@ -1618,7 +1638,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 155,
       "metadata": {
         "id": "DetExample"
       },
@@ -1665,7 +1685,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 156,
       "metadata": {
         "id": "InverseExample"
       },
@@ -1718,7 +1738,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 157,
       "metadata": {
         "id": "EigenExample"
       },
@@ -1784,7 +1804,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 158,
       "metadata": {
         "id": "LinearSystemExample"
       },
@@ -1839,7 +1859,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 159,
       "metadata": {
         "id": "SVDExample"
       },
@@ -1903,7 +1923,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 160,
       "metadata": {
         "id": "RankExample"
       },
@@ -1963,7 +1983,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 161,
       "metadata": {
         "id": "ReshapeExample"
       },
