--- a/book/math_foundations/linalg/dot_prod.ipynb
+++ b/book/math_foundations/linalg/dot_prod.ipynb
@@ -29,7 +29,17 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 19,
+            "execution_count": 25,
+            "id": "3181d7ee",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "import numpy as np"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 26,
             "id": "d4af08fb",
             "metadata": {},
             "outputs": [
@@ -49,7 +59,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 20,
+            "execution_count": 27,
             "id": "e23621a8",
             "metadata": {},
             "outputs": [
@@ -59,7 +69,7 @@
                             "np.int64(32)"
                         ]
                     },
-                    "execution_count": 20,
+                    "execution_count": 27,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -79,16 +89,16 @@
                 "$$\n",
                 "\\begin{aligned}\n",
                 "\\pmb{A}\\pmb{b} &= \\begin{bmatrix}\n",
-                "\\sum_{i=1}^{n}a_{1,i}b_i \\cr\n",
-                "\\sum_{i=1}^{n}a_{2,i}b_i \\cr\n",
+                "\\sum_{i=1}^{n}A_{1,i}b_i \\cr\n",
+                "\\sum_{i=1}^{n}A_{2,i}b_i \\cr\n",
                 "\\vdots  \\cr\n",
-                "\\sum_{i=1}^{n}a_{m,i}b_i\n",
+                "\\sum_{i=1}^{n}A_{m,i}b_i\n",
                 "\\end{bmatrix} \\\\\n",
                 "&= \\begin{bmatrix}\n",
-                "a_{1,1} & a_{1,2} & \\ldots & a_{1,n} \\cr\n",
-                "a_{2,1} & a_{2,2} & \\ldots & a_{2,n} \\cr\n",
+                "A_{1,1} & A_{1,2} & \\ldots & A_{1,n} \\cr\n",
+                "A_{2,1} & A_{2,2} & \\ldots & A_{2,n} \\cr\n",
                 "\\vdots & \\vdots & \\ldots & \\vdots \\cr\n",
-                "a_{m,1} & a_{m,2} & \\ldots & a_{m,n}\n",
+                "A_{m,1} & A_{m,2} & \\ldots & A_{m,n}\n",
                 "\\end{bmatrix}\\begin{bmatrix}\n",
                 "b_1 \\cr\n",
                 "b_2 \\cr\n",
@@ -96,10 +106,10 @@
                 "b_n\n",
                 "\\end{bmatrix} \\\\\n",
                 "&= \\begin{bmatrix}\n",
-                "a_{1,1}b_1 + a_{1,2}b_2 + \\ldots + a_{1,n}b_n \\cr\n",
-                "a_{2,1}b_1 + a_{2,2}b_2 + \\ldots + a_{2,n}b_n \\cr\n",
+                "A_{1,1}b_1 + A_{1,2}b_2 + \\ldots + A_{1,n}b_n \\cr\n",
+                "A_{2,1}b_1 + A_{2,2}b_2 + \\ldots + A_{2,n}b_n \\cr\n",
                 "\\vdots \\cr\n",
-                "a_{m,1}b_1 + a_{m,2}b_2 + \\ldots + a_{m,n}b_n\n",
+                "A_{m,1}b_1 + A_{m,2}b_2 + \\ldots + A_{m,n}b_n\n",
                 "\\end{bmatrix}\n",
                 "\\end{aligned}\n",
                 "$$\n",
@@ -109,7 +119,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 21,
+            "execution_count": 28,
             "id": "acc754e6",
             "metadata": {},
             "outputs": [
@@ -134,7 +144,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 22,
+            "execution_count": 29,
             "id": "169f2f01",
             "metadata": {},
             "outputs": [
@@ -144,7 +154,7 @@
                             "array([32, 77])"
                         ]
                     },
-                    "execution_count": 22,
+                    "execution_count": 29,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -169,21 +179,21 @@
                 "$$\n",
                 "\\begin{aligned}\n",
                 "\\pmb{A}\\pmb{B} &= \\begin{bmatrix}\n",
-                "a_{1,1} & a_{1,2} & \\ldots & a_{1,n} \\cr\n",
-                "a_{2,1} & a_{2,2} & \\ldots & a_{2,n} \\cr\n",
+                "A_{1,1} & A_{1,2} & \\ldots & A_{1,n} \\cr\n",
+                "A_{2,1} & A_{2,2} & \\ldots & A_{2,n} \\cr\n",
                 "\\vdots & \\vdots & \\ldots & \\vdots \\cr\n",
-                "a_{m,1} & a_{m,2} & \\ldots & a_{m,n}\n",
+                "A_{m,1} & A_{m,2} & \\ldots & A_{m,n}\n",
                 "\\end{bmatrix}\\begin{bmatrix}\n",
-                "b_{1,1} & b_{1,2} \\ldots & b_{1,p} \\cr\n",
-                "b_{2,1} & b_{2,2} \\ldots & b_{2,p} \\cr\n",
+                "B_{1,1} & B_{1,2} \\ldots & B_{1,p} \\cr\n",
+                "B_{2,1} & B_{2,2} \\ldots & B_{2,p} \\cr\n",
                 "\\vdots & \\vdots \\ldots & \\vdots \\cr\n",
-                "b_{n,1} & b_{n,2} \\ldots & b_{n,p}\n",
+                "B_{n,1} & B_{n,2} \\ldots & B_{n,p}\n",
                 "\\end{bmatrix} \\\\\n",
                 "&= \\begin{bmatrix}\n",
-                "a_{1,1}b_{1,1} + a_{1,2}b_{2,1} + \\ldots + a_{1,n}b_{n,1} & a_{1,1}b_{1,2} + a_{1,2}b_{2,2} + \\ldots + a_{1,n}b_{n,2} & \\ldots & a_{1,1}b_{1,p} + a_{1,2}b_{2,p} + \\ldots + a_{1,n}b_{n,p} \\cr\n",
-                "a_{2,1}b_{1,1} + a_{2,2}b_{2,1} + \\ldots + a_{2,n}b_{n,1} & a_{2,1}b_{1,2} + a_{2,2}b_{2,2} + \\ldots + a_{2,n}b_{n,2} & \\ldots & a_{2,1}b_{1,p} + a_{2,2}b_{2,p} + \\ldots + a_{2,n}b_{n,p} \\cr\n",
+                "A_{1,1}B_{1,1} + A_{1,2}B_{2,1} + \\ldots + A_{1,n}B_{n,1} & A_{1,1}B_{1,2} + A_{1,2}B_{2,2} + \\ldots + A_{1,n}B_{n,2} & \\ldots & A_{1,1}B_{1,p} + A_{1,2}B_{2,p} + \\ldots + A_{1,n}B_{n,p} \\cr\n",
+                "A_{2,1}B_{1,1} + A_{2,2}B_{2,1} + \\ldots + A_{2,n}B_{n,1} & A_{2,1}B_{1,2} + A_{2,2}B_{2,2} + \\ldots + A_{2,n}B_{n,2} & \\ldots & A_{2,1}B_{1,p} + A_{2,2}B_{2,p} + \\ldots + A_{2,n}B_{n,p} \\cr\n",
                 "\\vdots & \\vdots & \\vdots & \\vdots \\cr\n",
-                "a_{m,1}b_{1,1} + a_{m,2}b_{2,1} + \\ldots + a_{m,n}b_{n,1} & a_{m,1}b_{1,2} + a_{m,2}b_{2,2} + \\ldots + a_{m,n}b_{n,2} & \\ldots & a_{m,1}b_{1,p} + a_{m,2}b_{2,p} + \\ldots + a_{m,n}b_{n,p}\n",
+                "A_{m,1}B_{1,1} + A_{m,2}B_{2,1} + \\ldots + A_{m,n}B_{n,1} & A_{m,1}B_{1,2} + A_{m,2}B_{2,2} + \\ldots + A_{m,n}B_{n,2} & \\ldots & A_{m,1}B_{1,p} + A_{m,2}B_{2,p} + \\ldots + A_{m,n}B_{n,p}\n",
                 "\\end{bmatrix}\n",
                 "\\end{aligned}\n",
                 "$$\n",
@@ -193,7 +203,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 23,
+            "execution_count": 30,
             "id": "58942b0b",
             "metadata": {},
             "outputs": [
@@ -216,7 +226,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 24,
+            "execution_count": 31,
             "id": "38155373",
             "metadata": {},
             "outputs": [
@@ -227,7 +237,7 @@
                             "       [173, 188, 203, 218]])"
                         ]
                     },
-                    "execution_count": 24,
+                    "execution_count": 31,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
