--- a/book/math_foundations/linalg/basis_ops.ipynb
+++ b/book/math_foundations/linalg/basis_ops.ipynb
@@ -133,6 +133,16 @@
                 "\\vdots  &  & \\vdots &  & \\vdots \\cr\n",
                 "A_{m,1} \\times B_{m,1} & \\ldots & A_{m,j} \\times B_{m,j} & \\ldots & A_{m,n} \\times B_{m,n}\n",
                 "\\end{bmatrix}\n",
+                "$$\n",
+                "\n",
+                "$$\n",
+                "\\pmb{A}^T \\odot \\pmb{b} = \\begin{bmatrix}\n",
+                "A_{1,1}b_1 & \\ldots & A_{1, i}b_1 & \\ldots & A_{1, m}b_1 \\cr\n",
+                "\\vdots  &  & \\vdots &  & \\vdots \\cr\n",
+                "A_{j, 1}b_2 & \\ldots & A_{j,i}b_2 & \\ldots & A_{j,m}b_2 \\cr\n",
+                "\\vdots  &  & \\vdots &  & \\vdots \\cr\n",
+                "A_{n,1}b_n & \\ldots & A_{n,i}b_n & \\ldots & A_{n,m}b_n\n",
+                "\\end{bmatrix}\n",
                 "$$"
             ]
         }
