--- a/book/ml_principles/labo/uber.ipynb
+++ b/book/ml_principles/labo/uber.ipynb
@@ -8,9 +8,7 @@
     "# Data exploratie\n",
     "In dit labo maken we een verkennende analyse van een bekende open dataset van Uber. Terloops maken we kennis met de [Pandas](https://pandas.pydata.org/) en [Plotly](https://plotly.com/graphing-libraries/) bibliotheken.\n",
     "\n",
-    "Bronnen\n",
-    "- data: [Uber Data Analytics Dashboard](https://www.kaggle.com/datasets/yashdevladdha/uber-ride-analytics-dashboard/data)\n",
-    "- analyse: [The Complete Uber Data Analytics Playbook](https://www.kaggle.com/code/albab12/the-complete-uber-analytics-playbook)"
+    "Bron: [Uber Data Analytics Dashboard](https://www.kaggle.com/datasets/yashdevladdha/uber-ride-analytics-dashboard/data)"
    ]
   },
   {
