--- a/book/ml_principles/labo/uber#1.ipynb
+++ b/book/ml_principles/labo/uber#1.ipynb
@@ -5,8 +5,8 @@
    "id": "8fc95652",
    "metadata": {},
    "source": [
-    "# Data exploratie\n",
-    "In dit labo maken we een verkennende analyse van een bekende open dataset van Uber. Terloops maken we kennis met de [Pandas](https://pandas.pydata.org/) en [Plotly](https://plotly.com/graphing-libraries/) bibliotheken.\n",
+    "# Exploratieve Data Analyse (EDA) #1\n",
+    "In dit labo maken we een verkennende analyse open data van Uber. Terloops maken we kennis met de [Pandas](https://pandas.pydata.org/) en [Plotly](https://plotly.com/graphing-libraries/) bibliotheken.\n",
     "\n",
     "Bron: [Uber Data Analytics Dashboard](https://www.kaggle.com/datasets/yashdevladdha/uber-ride-analytics-dashboard/data)"
    ]
