--- a/book/ml_principles/basis/algorithmes.ipynb
+++ b/book/ml_principles/basis/algorithmes.ipynb
@@ -472,7 +472,11 @@
                 "[![](https://huggingface.co/datasets/huggingface-deep-rl-course/course-images/resolve/main/en/unit1/RL_process_game.jpg)](https://huggingface.co/learn/deep-rl-course/en/unit1/rl-framework)\n",
                 "\n",
                 "### Performantiemaat, _P_\n",
-                "🚧"
+                "Het is de bedoeling dat een computerprogramma door ervaring (_E_) betere prestaties haalt in het uitvoeren van een taak of taken (_T_). **Die prestaties worden geëvalueerd op basis van performantiematen; beter bekend als _metrics_**. In eerste instantie valt de _loss_ functie hieronder. Daarmee bepalen we rechtstreeks het _objectief_ van het leeralgoritme, meer specifiek, de sub-optimaliteit van onze parameterschattingen op een gegeven moment.  \n",
+                "  \n",
+                "De _loss_ functie geeft niet noodzakelijk rechtstreeks een zicht op taak-prestaties. We zullen zien dat er verschillende _metrics_ gangbaar zijn, afhankelijk van de taak-context (bv. klassificatie, regressie, enz.) en het specifieke domein (bv. computervisie, NLP, enz.). Het gaat onder andere over klassificatie _accuracy_, _F_-scores, _Intersection over Union_ (IoU), _Mean Average Error_ (_MAE_), enz. (zie [_scikit-learn metrics_ module](https://scikit-learn.org/stable/api/sklearn.metrics.html#module-sklearn.metrics) en [_scikit-learn scoring guide_](https://scikit-learn.org/stable/modules/model_evaluation.html#metrics-and-scoring-quantifying-the-quality-of-predictions)).  \n",
+                "  \n",
+                "**Het toepassen van _metrics_ om prestaties in kaart te brengen, heet algemeen: _model scoring_**."
             ]
         }
     ],
