--- a/book/math_foundations/linalg/lineaire_regressie/monte_carlo.ipynb
+++ b/book/math_foundations/linalg/lineaire_regressie/monte_carlo.ipynb
@@ -1259,7 +1259,7 @@
             "metadata": {},
             "source": [
                 "::: {tip}\n",
-                "Probeer de Monte Carlo simulatie ook eens met een andere _seed_ voor de random generator.\n",
+                "Probeer de Monte Carlo sampling ook eens met een andere _seed_ voor de random generator.\n",
                 "``` python\n",
                 "rng = np.random.default_rng(123)\n",
                 "```\n",
