--- a/book/math_foundations/linalg/lineaire_regressie/grid.ipynb
+++ b/book/math_foundations/linalg/lineaire_regressie/grid.ipynb
@@ -54,7 +54,7 @@
                 "$$\n",
                 "\\begin{align}\n",
                 "E(e_i) &= 0 \\cr\n",
-                "E{\\pmb{y}} &= \\pmb{X}\\pmb{b}\n",
+                "E(\\pmb{y}) &= \\pmb{X}\\pmb{b}\n",
                 "\\end{align}\n",
                 "$$\n",
                 "\n",
@@ -205,10 +205,26 @@
         },
         {
             "cell_type": "markdown",
+            "id": "18e08c2d",
+            "metadata": {},
+            "source": [
+                ":::{important}\n",
+                "Zoals te zien is in de visualisatie, is er geen oplossing voor $\\pmb{b} = [b_1, b_2]^T$ die door alle punten loopt. Dit komt uiteraard door de aanwezigheid van de additieve error vector $\\pmb{e} \\neq \\pmb{0}$ in de simulatie. Mocht $\\pmb{e} = \\pmb{0}$ zijn, reduceert de lineaire regressie vergelijking tot $\\pmb{y} = \\pmb{X}\\pmb{b}$. Alle punten vallen dan op éénzelfde lijn en we vinden, zoals reeds gezien, de oplossing aan de hand van de matrix-inverse van $\\pmb{X}$:\n",
+                "\n",
+                "$$\n",
+                "\\pmb{b} = \\pmb{X}^{-1}\\pmb{y}\n",
+                "$$\n",
+                "\n",
+                "Deze oplossing is hier _niet_ aan de orde omdat het lineaire regressie model veronderstelt dat $\\pmb{e} \\neq \\pmb{0}$.\n",
+                ":::"
+            ]
+        },
+        {
+            "cell_type": "markdown",
             "id": "1a3b90bd",
             "metadata": {},
             "source": [
-                "## _Loss_ functie: SSE\n",
+                "## _Loss_ functie: $SSE$\n",
                 "\n",
                 ":::{note} Definitie\n",
                 ":class: dropdown\n",
@@ -216,7 +232,7 @@
                 "\n",
                 ":::\n",
                 "\n",
-                "We kiezen hier voor de **_Sum of Squared Errors (SSE)_** functie[^ml_principles]:\n",
+                "Om het leeralgoritme sturen, kiezen we hier voor de **_Sum of Squared Errors ($SSE$)_** functie[^ml_principles]:\n",
                 "\n",
                 "$$\n",
                 "J_{SSE}(f(\\pmb{x}); \\pmb{y}) = \\sum_{i=1}^M(y_i-f(x_i))^2\n",
@@ -250,10 +266,10 @@
                 "\\end{align}\n",
                 "$$\n",
                 "\n",
-                "Terugkijkend naar de definitie van de Euclidische norm ($L^2$; $||\\pmb{a}||_2 = \\sqrt{\\pmb{a}^T\\pmb{a}}$), volgt dat de SSE _loss_ overeenkomt met het _kwadraat_ van de $L^2$ norm van de vector van verschillen $\\pmb{d}$ tussen geobserveerde waarden $\\pmb{y}$ en geschatte waarden $\\hat{\\pmb{y}}$. \n",
+                "Terugkijkend naar de definitie van de Euclidische norm ($L^2$; $||\\pmb{a}||_2 = \\sqrt{\\pmb{a}^T\\pmb{a}}$), volgt dat de $SSE$ _loss_ overeenkomt met het _kwadraat_ van de $L^2$ norm van de vector van verschillen $\\pmb{d}$ tussen geobserveerde waarden $\\pmb{y}$ en geschatte waarden $\\hat{\\pmb{y}}$. \n",
                 ":::\n",
                 "\n",
-                "**De bedoeling van het _leeralgoritme_ is dus om op zoek te gaan naar waarden voor de model parameters $\\pmb{b}$ die de SSE _loss_ _minimaliseren_**.\n",
+                "**De bedoeling van het _leeralgoritme_ is dus om op zoek te gaan naar waarden voor de model parameters $\\pmb{b}$ die de $SSE$ _loss_ _minimaliseren_**.\n",
                 "\n",
                 "[^ml_principles]: Zoals gezien in de cursus _ML Principles_"
             ]
@@ -316,11 +332,11 @@
             "id": "9d940407",
             "metadata": {},
             "source": [
-                "## Visualisatie van het _SSE_ oppervlak\n",
+                "## Visualisatie van het $SSE$ oppervlak\n",
                 "\n",
-                "We kunnen in deze éénvoudige simulatie met 2 parameters ($b_1$ en $b_2$), de _SSE_ _loss_ functie voorstellen als een 3D oppervlak: $\\{x: b_1, y: b_2, z: SSE\\}$. We maken:\n",
+                "We kunnen in deze éénvoudige simulatie met 2 parameters ($b_1$ en $b_2$), de $SSE$ _loss_ functie voorstellen als een 3D oppervlak: $\\{x: b_1, y: b_2, z: SSE\\}$. We maken:\n",
                 "1. een _grid_ van $(b_1, b_2)$ coördinaten $(x, y)$,\n",
-                "2. berekenen de overeenkomstige _SSE_ (als $z$-coördinaat) en\n",
+                "2. berekenen de overeenkomstige $SSE$ (als $z$-coördinaat) en\n",
                 "3. gebruiken Plotly om de resulterende 3D coördinaten als een oppervlak af te beelden."
             ]
         },
@@ -1309,7 +1325,7 @@
             "metadata": {},
             "source": [
                 "## _Grid parameter search_\n",
-                "In de visualisatie is het coördinaat waar de SSE het kleinst is in het groen aangeduid. Als je met de muis over het oppervlak beweegt, kan je zien dat de SSE langs alle zijden van dit punt oploopt. Er is **één absoluut minimum en geen _lokale minima_**: er wordt gezegd dat de SSE _loss_ functie **_convex_** is dit geval. Het minimum komt hier overeen met $b_1 = 0.615$ en $b_2 = 0.138$. Dit ligt in de buurt van onze simulatie parameters ($b_1 = 0.50$, $b_2 = 0.15$). De enige afwijking is te wijten aan onze keuze van _spacing_ in het _grid_. Deze _brute force_ **methode om aan de hand van een $N$D _parameter grid_ het minimum van de _loss_ functie te zoeken** is op zich een leeralgoritme en wordt **grid search** genoemd.  \n",
+                "In de visualisatie is het coördinaat waar de $SSE$ het kleinst is in het groen aangeduid. Als je met de muis over het oppervlak beweegt, kan je zien dat de $SSE$ langs alle zijden van dit punt oploopt. Er is **één absoluut minimum en geen _lokale minima_**: er wordt gezegd dat de $SSE$ _loss_ functie **_convex_** is dit geval. Het minimum komt hier overeen met $b_1 = 0.615$ en $b_2 = 0.138$. Dit ligt in de buurt van onze simulatie parameters ($b_1 = 0.50$, $b_2 = 0.15$). De enige afwijking is te wijten aan onze keuze van _spacing_ in het _grid_. Deze _brute force_ **methode om aan de hand van een $N$D _parameter grid_ het minimum van de _loss_ functie te zoeken** is op zich een leeralgoritme en wordt **grid search** genoemd.  \n",
                 "### Voordeel\n",
                 "Geen complexe wiskunde nodig.\n",
                 "### Nadeel\n",
