--- a/book/math_foundations/linalg/lineaire_regressie/monte_carlo.ipynb
+++ b/book/math_foundations/linalg/lineaire_regressie/monte_carlo.ipynb
@@ -8,11 +8,11 @@
                 "# Monte Carlo sampling \n",
                 "Als alternatief voor _grid search_ zouden we via _sampling_ kunnen werken.\n",
                 "\n",
-                "1. We starten met een eerste berekende gok voor de parameters en berekenen de SSE _loss_ bij de start\n",
+                "1. We starten met een eerste berekende gok voor de parameters en berekenen de $SSE$ _loss_ bij de start\n",
                 "2. Daarna itereren we (30k keer) over volgende stappen:\n",
                 "    - We nemen een sample uit een normale verdeling met gemiddelde $0$ om een kleine aanpassing te doen aan de parameterschattingen (in positieve of negatieve zin).\n",
                 "    - We zorgen dat de bijgewerkte schattingen binnen een realistisch interval blijven.\n",
-                "    - We berekenen de SSE _loss_ opnieuw. Als de nieuwe SSE is gedaald, behouden we de nieuwe parameterwaarden. In het andere geval verwerpen we ze."
+                "    - We berekenen de $SSE$ _loss_ opnieuw. Als de nieuwe $SSE$ is gedaald, behouden we de nieuwe parameterwaarden. In het andere geval verwerpen we ze."
             ]
         },
         {
@@ -144,9 +144,9 @@
             "id": "9d940407",
             "metadata": {},
             "source": [
-                "## Visualisatie van het SSE oppervlak\n",
+                "## Visualisatie van het $SSE$ oppervlak\n",
                 "\n",
-                "Nu we de Monte Carlo sampling hebben uitgevoerd, kunnen we stappen visualiseren op het SSE oppervlak. Zo zien we hoe het algoritme \"bergafwaarts\" beweegt naar het minimum."
+                "Nu we de Monte Carlo sampling hebben uitgevoerd, kunnen we stappen visualiseren op het $SSE$ oppervlak. Zo zien we hoe het algoritme \"bergafwaarts\" beweegt naar het minimum."
             ]
         },
         {
