--- a/book/math_foundations/linalg/lineaire_regressie/gradient.ipynb
+++ b/book/math_foundations/linalg/lineaire_regressie/gradient.ipynb
@@ -5,19 +5,19 @@
    "id": "b2adf5d2",
    "metadata": {},
    "source": [
-    "# _SSE_ _Gradient_\n",
+    "# $SSE$ _Gradient_\n",
     "\n",
-    "In deze sectie concentreren we ons eerst op de SSE functie in het geval we maar naar een parameter op zoek zijn (hetzij omdat het model maar één parameter heeft of we de andere parameter(s) reeds kennen). We krijgen dan een U-vormige curve te zien zoals hieronder afgebeeld.\n",
+    "In deze sectie concentreren we ons eerst op de $SSE$ functie in het (triviale) geval dat we een linear regressie model hebben met enkel een _intercept_ ($\\pmb{b} = [b_1]^T$). We krijgen dan een U-vormige curve te zien zoals hieronder afgebeeld. Pas in tweede instantie kijken we naar modellen met één of meerdere _predictoren_ $\\pmb{b} = [b_1, b_2, \\ldots]^T$.\n",
     "\n",
     ":::{tip}\n",
-    "Je kan dit ook zien als je in de 3D visualisatie, het assenstelsel zo draait rond de verticale as, dat je recht op de $x$- of $y$-as kijkt.\n",
+    "Je kan een gelijkaardige curve zien wanneer je in de 3D visualisatie het assenstelsel zó draait rond de verticale as, dat je recht op de $b_2$-as kijkt.\n",
     ":::"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "af2ac400",
+   "execution_count": 1,
+   "id": "8df417de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "84490a80",
    "metadata": {},
    "outputs": [
@@ -51,13 +51,24 @@
    "id": "f80e14de",
    "metadata": {},
    "source": [
-    "Bij de Monte Carlo simulatie gaven we ons over aan het _willekeurig aftasten_ van de SSE functie. We zochten steeds naar een richting in de ruimte waarin we een _stapje naar beneden_ konden zetten. Het is echter wiskundig perfect mogelijk om op ieder punt te bepalen in welke richting de daling het grootst zal zijn. Dit brengt ons bij het concept van een **_raak- of tangentlijn_ op een bepaald punt van een functie waarvan de richtingscoëfficient (of _slope_) de \"_afgeleide_\" van die functie in dat punt wordt genoemd**.  \n",
-    "    \n",
-    "De illustratie hierboven toont het principe. We beginnen met een rechte die een **kwadratische functie**\n",
+    "Bij de Monte Carlo sampling gaven we ons over aan het _willekeurig aftasten_ van de $SSE$ functie. We zochten steeds naar een richting in de ruimte waarin we een _stapje naar beneden_ konden zetten. Het is echter wiskundig perfect mogelijk om op ieder punt te bepalen in welke richting de daling het grootst zal zijn. Dit brengt ons bij het concept van een **_raak- of tangentlijn_ op een bepaald punt van een functie waarvan de richtingscoëfficient (of _slope_) de \"_afgeleide_\" van die functie in dat punt wordt genoemd**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a21c38e",
+   "metadata": {},
+   "source": [
+    "## Afgeleide van een kwadratische functie\n",
+    "De illustratie hierboven toont het principe van een afgeleide in het geval van een enkelvoudige **kwadratische functie**: \n",
     "\n",
     "$$f(x) = x^2$$\n",
     "\n",
-    "op twee punten snijdt: $(x_1, y_1)$ en $(x_2, y_2)$. Om de richtingscoëfficient te bepalen, rekenen we gewoon de verhouding uit tussen de afstand op de $y$-as ($\\Delta y = y_2 - y_1$) en de afstand op de $x$-as ($\\Delta x = x_2 - x_1$).\n",
+    ":::{warning}\n",
+    "Dit is nog **_niet_** het specifieke geval van de SSE functie.\n",
+    ":::\n",
+    "\n",
+    "We beginnen met een rechte die de kwadratische functie op twee punten snijdt: $(x_1, y_1)$ en $(x_2, y_2)$. Om de richtingscoëfficient te bepalen, rekenen we gewoon de verhouding uit tussen de afstand op de $y$-as ($\\Delta y = y_2 - y_1$) en de afstand op de $x$-as ($\\Delta x = x_2 - x_1$).\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -71,15 +82,128 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "Dit geeft al een eerste idee van de richting waarin de SSE (het sterkst) daalt. We kunnen een preciezere richting krijgen door het interval kleiner en kleiner te maken. **In het theoretisch kleinste interval ($\\lim_{\\Delta x\\to 0}$) spreken we niet meer van een snijlijn, maar een raak- of tangentlijn in een bepaald punt en niet meer van de richtingscoëfficient van die lijn, maar van de afgeleide van de functie in dat punt**. Als we in het kwadratische geval $\\Delta x$ op $0$ zetten, krijgen we:\n",
+    "Dit geeft al een eerste idee van de richting waarin de kwadratische functie daalt. We kunnen een preciezere richting krijgen door het interval kleiner en kleiner te maken. **In het theoretisch kleinste interval ($\\lim_{\\Delta x\\to 0}$) spreken we niet meer van een snijlijn, maar een raak- of tangentlijn in een bepaald punt en niet meer van de richtingscoëfficient van die lijn, maar van de afgeleide van de functie in dat punt**. Als we in het kwadratische geval $\\Delta x$ op $0$ zetten, krijgen we:\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
     "\\lim_{\\Delta x\\to 0} \\frac{\\Delta y}{\\Delta x} &= \\frac{\\partial y}{\\partial x} \\cr\n",
     "&= 2x\n",
     "\\end{aligned} \n",
-    "$$"
+    "$$\n",
+    "\n",
+    ":::{note}\n",
+    "Het minimum van de kwadratische functie $f(x) = x^2$ is het punt waar de raaklijn perfect horizontaal loopt. Hier is de afgeleide $0$. Dit is altijd het punt waar $x=0$.\n",
+    ":::"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8af82dac",
+   "metadata": {},
+   "source": [
+    "## Afgeleide van de $SSE$ met $\\pmb{b} = [b_1]^T$ \n",
+    "Bij de $SSE$ functie hebben we te maken met de **_som_** van $M$ kwadratische functies. Iedere individuele functie heeft de vorm:\n",
+    "\n",
+    "$$\n",
+    "f(y_i - \\hat{y_i}) = (y_i - \\hat{y_i})^2\n",
+    "$$\n",
+    "\n",
+    "of\n",
+    "\n",
+    "$$\n",
+    "f(d_i) = {d_i}^2\n",
+    "$$\n",
+    "\n",
+    "waarbij $d_i$ het verschil is tussen een bepaalde model output $\\hat{y_i}$ en de overeenkomstige target waarde $y_i$.\n",
+    "We weten intussen dat de afgeleide hier $2d_i$ ofwel $2(y_i - \\hat{y_i})$ is.\n",
+    "  \n",
+    "Maar we hebben bij de $SSE$ dus te maken met de _som_ van alle verschillen tussen model outputs en target values in onze training data:\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "J_{SSE}(f(\\pmb{x}); \\pmb{y}) &= \\sum_{i=1}^M(y_i-f(x_i))^2 \\cr\n",
+    "&= \\sum_{i=1}^M(y_i-\\hat{y_i})^2 \\cr\n",
+    "&= (y_1 - \\hat{y_1})^2 + (y_2 - \\hat{y_2})^2 + \\ldots + (y_m - \\hat{y_m})^2 \\cr\n",
+    "&= {d_1}^2 + {d_2}^2 + \\ldots + {d_m}^2\n",
+    "\\end{aligned}\n",
+    "$$ \n",
+    "\n",
+    "### De _som-regel_\n",
+    "De _som-regel_ houdt in dat **voor iedere functie $g$ en $h$, de afgeleide van hun som $g + h$ gelijk is aan de som van de individuele afgeleides $g'$ en $h'$**:\n",
+    "\n",
+    "als\n",
+    "$$\n",
+    "f = g + h\n",
+    "$$\n",
+    "dan\n",
+    "$$\n",
+    "f' = g' + h'\n",
+    "$$\n",
+    "\n",
+    "We krijgen dus\n",
+    "\n",
+    "$$\n",
+    "J_{SSE}(f(\\pmb{x}); \\pmb{y})' = 2d_1 + 2d_2 + \\ldots + 2d_m\n",
+    "$$\n",
+    "\n",
+    "In het geval van een model met enkel een intercept ($\\pmb{b} = [b_1]^T$) krijgen we:\n",
+    "\n",
+    "$$\n",
+    "J_{SSE}(f(\\pmb{x}); \\pmb{y})' = \\frac{\\partial SSE}{\\partial b_1} = 2\\sum_{i=1}^M(y_i-b_1)\n",
+    "$$\n",
+    "\n",
+    "Wanneer we de ideale waarde voor $b_1$ willen vinden, kunnen we deze afgeleide gelijk stellen aan $0$ ($\\to$ horizontale tangentlijn):\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "0 &= 2\\sum_{i=1}^M(y_i-\\hat{b_1}) \\cr\n",
+    "0 &= \\sum_{i=1}^M(y_i-\\hat{b_1}) \\cr\n",
+    "0 &= \\sum_{i=1}^My_i -M\\hat{b_1} \\cr\n",
+    "M\\hat{b_1} &= \\sum_{i=1}^My_i \\cr\n",
+    "\\hat{b_1} &= \\frac{\\sum_{i=1}^My_i}{M}\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "De beste estimate is met andere woorden gelijk aan het gemiddelde van alle trainingsdata $y_i$.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b67ba9f",
+   "metadata": {},
+   "source": [
+    "## _Gradient_ van de $SSE$ met $\\pmb{b} = [b_1, b_2]^T$\n",
+    "\n",
+    "In het geval van $\\pmb{b} = [b_1, b_2]^T$ neemt de $SSE$ de vorm aan van een oppervlakte (zoals reeds geïllustreerd bij de grid search en monte carlo sampling). We drukken de afgeleide dan ook uit in twee dimensies:\n",
+    "\n",
+    "$$\n",
+    "J_{SSE}(f(\\pmb{x}); \\pmb{y})' = \\nabla{SSE} = \\begin{bmatrix}\n",
+    "\\frac{\\partial SSE}{\\partial b_1} \\cr\n",
+    "\\frac{\\partial SSE}{\\partial b_2}\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "De elementen $\\frac{\\partial SSE}{\\partial b_1}$ en $\\frac{\\partial SSE}{\\partial b_2}$ worden de **partiële afgeleides** van de $SSE$ functie genoemd. Samen vormen ze de **_gradient_** van de $SSE$ functie $\\nabla{SSE}$. **De _gradient_ verbreedt met andere woorden het concept van de _afgeleide_ naar het geval van meerdere onbekenden.**\n",
+    "\n",
+    "Om een ideale oplossing voor $[b_1, b_2]^T$ te vinden, kunnen we dus de $SSE$ gradient gelijk stellen aan $\\pmb{0}$:\n",
+    "\n",
+    "$$\n",
+    "\\nabla{SSE} = \\pmb{0} = \\begin{bmatrix}\n",
+    "0 \\cr\n",
+    "0\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "Daarvoor moeten we eerst het partiële afgeleiden toelichten.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c040670",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
