--- a/book/math_foundations/linalg/lineaire_regressie/gradient.ipynb
+++ b/book/math_foundations/linalg/lineaire_regressie/gradient.ipynb
@@ -10,7 +10,7 @@
     "In deze sectie concentreren we ons eerst op de $SSE$ functie in het (triviale) geval dat we een linear regressie model hebben met enkel een _intercept_ ($\\pmb{b} = [b_1]^T$). We krijgen dan een U-vormige curve te zien zoals hieronder afgebeeld. Pas in tweede instantie kijken we naar modellen met één of meerdere _predictoren_ $\\pmb{b} = [b_1, b_2, \\ldots]^T$.\n",
     "\n",
     ":::{tip}\n",
-    "Je kan een gelijkaardige curve zien wanneer je in de 3D visualisatie het assenstelsel zó draait rond de verticale as, dat je recht op de $b_2$-as kijkt.\n",
+    "Je kan een gelijkaardige curve zien wanneer je in de 3D visualisatie uit de vorige secties, het assenstelsel zó draait rond de verticale ($SSE$) as, dat je recht op de $b_2$-as kijkt.\n",
     ":::"
    ]
   },
@@ -65,10 +65,10 @@
     "$$f(x) = x^2$$\n",
     "\n",
     ":::{warning}\n",
-    "Dit is nog **_niet_** het specifieke geval van de SSE functie.\n",
+    "Dit is nog **_niet_** het specifieke geval van de SSE functie. Daar hebben we te maken met sommen van kwadraten.\n",
     ":::\n",
     "\n",
-    "We beginnen met een rechte die de kwadratische functie op twee punten snijdt: $(x_1, y_1)$ en $(x_2, y_2)$. Om de richtingscoëfficient te bepalen, rekenen we gewoon de verhouding uit tussen de afstand op de $y$-as ($\\Delta y = y_2 - y_1$) en de afstand op de $x$-as ($\\Delta x = x_2 - x_1$).\n",
+    "We beginnen met een rechte die de kwadratische functie op twee punten _snijdt_: $(x_1, y_1)$ en $(x_2, y_2)$. Om de richtingscoëfficient te bepalen, rekenen we gewoon de verhouding uit tussen de afstand op de $y$-as ($\\Delta y = y_2 - y_1$) en de afstand op de $x$-as ($\\Delta x = x_2 - x_1$).\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -82,7 +82,7 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "Dit geeft al een eerste idee van de richting waarin de kwadratische functie daalt. We kunnen een preciezere richting krijgen door het interval kleiner en kleiner te maken. **In het theoretisch kleinste interval ($\\lim_{\\Delta x\\to 0}$) spreken we niet meer van een snijlijn, maar een raak- of tangentlijn in een bepaald punt en niet meer van de richtingscoëfficient van die lijn, maar van de afgeleide van de functie in dat punt**. Als we in het kwadratische geval $\\Delta x$ op $0$ zetten, krijgen we:\n",
+    "Dit geeft al een eerste idee van de richting waarin de kwadratische functie daalt. We kunnen een preciezere richting krijgen door het interval kleiner en kleiner te maken. **In het theoretisch kleinste interval ($\\lim_{\\Delta x\\to 0}$) spreken we niet meer van een snijlijn, maar een raak- of tangentlijn in een bepaald punt en niet meer van de richtingscoëfficient van die lijn, maar van de \"_afgeleide_\" van de functie in dat punt**. Als we in het bovenstaande geval $\\Delta x$ op $0$ zetten, krijgen we:\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -444,7 +444,7 @@
    "source": [
     "## _Gradient_ van de $SSE$ met $\\pmb{b} = [b_1, b_2, ...]^T$\n",
     "\n",
-    "In het algemene geval van een SSE met $N$ lineaire predictoren krijgen we voor de $SSE$ gradient:\n",
+    "In het algemene geval van een $SSE$ met $N$ lineaire predictoren hebben we te maken met een $N$-dimensioneel $SSE$ _hypersurface_. Voor de gradient krijgen we:\n",
     "\n",
     "$$\n",
     "\\nabla{SSE} = \\begin{bmatrix}\n",
@@ -471,7 +471,7 @@
     "\\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "Als we dit herordenen krijgen we voor iedere $\\hat{b_k}$ in de vector van partiële afgeleiden:\n",
+    "Als we dit herordenen krijgen we voor iedere $\\hat{b_k}$ in de vector van partiële afgeleiden, de volgende vergelijking:\n",
     "\n",
     "$$\n",
     "\\sum_{i=1}^M\\sum_{j=1}^Nx_{ik}x_{ij}\\hat{b_j} = \\sum_{i=1}^Mx_{ik}y_i\n",
@@ -483,11 +483,21 @@
     "k = 1, 2, \\ldots, n\n",
     "$$\n",
     "\n",
-    "**Deze vergelijkingen worden de _normal equations_ genoemd en kunnen als volgt in matrixvorm gegoten worden:\n",
+    "**Deze vergelijkingen worden de _normal equations_ genoemd** en kunnen als volgt in compacte matrixvorm geschreven worden:\n",
     "\n",
     "$$\n",
     "(\\pmb{X}^T\\pmb{X})\\hat{\\pmb{b}} = \\pmb{X}^T\\pmb{y}\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "De oplossing voor $\\hat{\\pmb{b}}$ wordt dan:\n",
+    "\n",
+    "$$\n",
+    "\\hat{\\pmb{b}} = (\\pmb{X}^T\\pmb{X})^{-1}\\pmb{X}^T\\pmb{y}\n",
+    "$$\n",
+    "\n",
+    ":::{important}\n",
+    "We kunnen _in theorie_ via de inverse $(\\pmb{X}^T\\pmb{X})^{-1}$ en matrix multiplicatie de zogenaamde **_ordinary least squares_** oplossing voor $\\hat{\\pmb{b}}$ uitrekenen. Dit wordt ook de _closed form_ oplossing voor lineaire regressiemodellen genoemd.\n",
+    ":::\n"
    ]
   }
  ],
